--- a/diary_app/package.json
+++ b/diary_app/package.json
@@ -10,8 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "axios": "^0.25.0",
     "react": "17.0.2",
-    "react-native": "0.67.2"
+    "react-native": "0.67.2",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-promise": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
